--- a/style.css
+++ b/style.css
@@ -649,3 +649,13 @@ line-height: 33px;
 .footimage img{
     width: 100%;
 }
+a{
+    text-decoration: none;
+    color:#fff;
+    cursor:pointer;
+    font-family: roboto;
+}
+
+a:hover{
+    color: yellow;
+}
